Added tailwind css

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html height="100%">
     <head>
-        <!-- INSERT SOME THINGS HERE -->
+        <link rel="stylesheet" href="css/index.css" />
     </head>
     <body height="100%">
         <div id="root" height="100%"></div>
